# core-tools

./: .gitignore  README.md
audio-converter/: README.md  package-lock.json  package.json
audio-converter/src/: app.js  index.html  styles.css
audio-converter/src-tauri/: Cargo.toml  tauri.conf.json
audio-converter/src-tauri/capabilities/: default.json
audio-converter/src-tauri/src/: lib.rs
batch-renamer/: README.md  build.bat  build.sh  package-lock.json  package.json  renamer.py
batch-renamer-tauri/: README.md  package-lock.json  package.json
batch-renamer-tauri/src/: app.js  index.html  style.css
batch-renamer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
batch-renamer-tauri/src-tauri/src/: main.rs
batch-renamer/src/: app.js  index.html  styles.css
batch-renamer/src-tauri/: Cargo.toml  tauri.conf.json
batch-renamer/src-tauri/capabilities/: default.json
batch-renamer/src-tauri/src/: lib.rs
calendar-sync/: README.md  app.py  build.bat  build.sh  config.py  main.py  requirements.txt
calendar-sync-tauri/: README.md  index.html  package-lock.json  package.json
calendar-sync-tauri/src/: main.js  style.css
calendar-sync-tauri/src-tauri/: Cargo.toml  tauri.conf.json
calendar-sync-tauri/src-tauri/src/: caldav.rs  db.rs  ics.rs  lib.rs  main.rs  models.rs  sync_engine.rs
calendar-sync/providers/: __init__.py  base.py  caldav_provider.py  google_cal.py  ics_file.py  outlook.py
calendar-sync/sync/: __init__.py  conflict.py  dedup.py  engine.py
calendar-sync/ui/: __init__.py  dialogs.py  log_tab.py  sources_tab.py  sync_tab.py  theme.py
clipboard-manager/: README.md  build.bat  build.sh  clipboard_manager.py
clipboard-manager-tauri/: README.md  package-lock.json  package.json
clipboard-manager-tauri/src-tauri/: Cargo.toml  tauri.conf.json
clipboard-manager-tauri/src-tauri/capabilities/: default.json
clipboard-manager-tauri/src-tauri/src/: db.rs  lib.rs  main.rs
clipboard-manager-tauri/ui/: app.js  index.html  style.css
clipboard-manager/src/: app.js  index.html  styles.css
clipboard-manager/src-tauri/: Cargo.toml  tauri.conf.json
clipboard-manager/src-tauri/capabilities/: default.json
clipboard-manager/src-tauri/src/: db.rs  lib.rs  main.rs
core-flasher/: README.md
core-flasher/src/: app.js  index.html  style.css
core-flasher/src-tauri/: Cargo.toml  tauri.conf.json
core-flasher/src-tauri/src/: drives.rs  flasher.rs  lib.rs  main.rs
duplicate-finder/: README.md  build.bat  build.sh  finder.py
ebook-converter/: README.md
ebook-converter/src/: index.html  main.js  styles.css
ebook-converter/src-tauri/: Cargo.toml  tauri.conf.json
ebook-converter/src-tauri/capabilities/: default.json
ebook-converter/src-tauri/src/: lib.rs
email-dedup/: README.md  build.bat  build.sh  email_dedup.py  setup.py
email-dedup-tauri/: README.md  package.json
email-dedup-tauri/src/: index.html
email-dedup-tauri/src-tauri/: Cargo.toml  tauri.conf.json
email-dedup-tauri/src-tauri/src/: email.rs  main.rs
image-converter/: README.md  build.bat  build.sh  image_converter.py  requirements.txt
image-converter-tauri/: README.md  package-lock.json  package.json
image-converter-tauri/src/: app.js  index.html  styles.css
image-converter-tauri/src-tauri/: Cargo.toml  tauri.conf.json
image-converter-tauri/src-tauri/capabilities/: default.json
image-converter-tauri/src-tauri/src/: converter.rs  main.rs
image-converter/src/: index.html
image-converter/src-tauri/: Cargo.toml  tauri.conf.json
image-converter/src-tauri/src/: main.rs
image-converter/src/css/: style.css
image-converter/src/js/: app.js
media-converter/: README.md  build.bat  build.sh  converter.py  package-lock.json  package.json  requirements.txt
media-converter-tauri/: README.md  package-lock.json  package.json
media-converter-tauri/src-tauri/: Cargo.toml  tauri.conf.json
media-converter-tauri/src-tauri/capabilities/: default.json
media-converter-tauri/src-tauri/src/: lib.rs  main.rs
media-converter-tauri/ui/: app.js  index.html  style.css
media-converter/src/: app.js  index.html  styles.css
media-converter/src-tauri/: Cargo.toml  tauri.conf.json
media-converter/src-tauri/capabilities/: default.json
media-converter/src-tauri/src/: lib.rs
ocr-converter/: README.md  package-lock.json  package.json
ocr-converter-tauri/: README.md  package-lock.json  package.json
ocr-converter-tauri/src/: index.html  main.js  styles.css
ocr-converter-tauri/src-tauri/: Cargo.toml  tauri.conf.json
ocr-converter-tauri/src-tauri/capabilities/: default.json
ocr-converter-tauri/src-tauri/src/: lib.rs  main.rs
ocr-converter/src/: app.js  index.html  styles.css
ocr-converter/src-tauri/: Cargo.toml  tauri.conf.json
ocr-converter/src-tauri/capabilities/: default.json
ocr-converter/src-tauri/src/: lib.rs
pdf-tools/: README.md  build.bat  build.sh  pdf_tools.py  requirements.txt
pdf-tools-tauri/: README.md  package-lock.json  package.json
pdf-tools-tauri/src/: index.html
pdf-tools-tauri/src-tauri/: Cargo.toml  tauri.conf.json
pdf-tools-tauri/src-tauri/src/: main.rs  pdf_ops.rs
screen-recorder/: README.md  build.bat  build.sh  requirements.txt  screen_recorder.py
system-info/: README.md  build.bat  build.sh  system_info.py
system-info-tauri/: README.md  package.json
system-info-tauri/src/: index.html
system-info-tauri/src-tauri/: Cargo.toml  tauri.conf.json
system-info-tauri/src-tauri/src/: main.rs  system.rs
