[package]
name = "core-audio-converter"
version = "1.0.0"
description = "CORE Audio Converter & Editor — Tauri 2 App"
authors = ["CORE SYSTEMS"]
license = "MIT"
repository = "https://github.com/adaw/core-tools"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
