[package]
name = "core-clipboard-manager"
version = "2.0.0"
description = "CORE Clipboard Manager — Professional clipboard history with search"
authors = ["CORE SYSTEMS"]
edition = "2021"

[lib]
name = "core_clipboard_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
uuid = { version = "1", features = ["v4"] }
csv = "1"
tokio = { version = "1", features = ["sync", "time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
