[package]
name = "core-flasher"
version = "1.0.0"
edition = "2021"
description = "CORE Flasher — USB bootable disk creator"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
md-5 = "0.10"
zip = "2"
bytesize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "core_flasher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
