[package]
name = "email-dedup-tauri"
version = "1.0.0"
edition = "2021"
description = "CORE Tool #6: Email Transfer & Dedup — Tauri 2 app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
imap = "2"
native-tls = "0.2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
mailparse = "0.15"
uuid = { version = "1", features = ["v4"] }
