[package]
name = "image-converter-tauri"
version = "1.0.0"
edition = "2021"
description = "CORE Tool #4: Batch Image Converter — Tauri 2 app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rayon = "1.10"
base64 = "0.22"
webp = "0.3"
