[package]
name = "core-image-converter"
version = "2.0.0"
edition = "2021"
description = "CORE Image Converter — Batch image format conversion with stunning UI"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["png", "jpeg", "gif", "bmp", "tiff", "ico", "webp", "avif"] }
rayon = "1.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
