[package]
name = "media-converter-tauri"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

[lib]
name = "media_converter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
