[package]
name = "media-converter"
version = "1.0.0"
description = "CORE Media Converter — Beautiful batch media conversion powered by FFmpeg"
authors = ["CORE SYSTEMS"]
edition = "2021"

[lib]
name = "media_converter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "media-converter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
