[package]
name = "ocr-converter-tauri"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"
image = "0.25"
tesseract = "0.15"
printpdf = "0.8"
tauri-plugin-dialog = "2.6.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "ocr_converter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
