[package]
name = "core-ocr-converter"
version = "1.0.0"
description = "CORE OCR & PDF↔Word Converter — Tauri 2 App"
authors = ["CORE SYSTEMS"]
license = "MIT"
repository = "https://github.com/adaw/core-tools"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tempfile = "3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
