[package]
name = "pdf-tools"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"
printpdf = "0.7"
image = "0.25"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
