[package]
name = "system-info-tauri"
version = "1.0.0"
edition = "2021"
description = "CORE Tool #8: System Info — Tauri 2 dashboard with real-time monitoring"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }
